# themark

./: Cargo.toml  README.md  sample.md
extras/: showcase.tape
templates/: dashboard.aml  index.aml  viewer.aml
templates/components/: code_block.aml  dashboard_item.aml  error_doc.aml  heading.aml  image.aml  link.aml  list.aml  loading_doc.aml  paragraph.aml  table.aml
themark-cli/: Cargo.toml
themark-cli/src/: main.rs  path_resolver.rs
themark-fs/: Cargo.toml
themark-fs/src/: lib.rs
themark-parser/: Cargo.toml
themark-parser/src/: lib.rs  syntax.rs
themark-ui/: Cargo.toml
themark-ui/src/: dashboard.rs  index.rs  inner_token.rs  lib.rs  router.rs  viewer.rs
themark-ui/src/components/: empty.rs  mod.rs
themes/: ayu-mirage.stTheme
